<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Bottom navigation bar -->
    <string name="icon_map_view">Map View</string>
    <string name="icon_list_view">List View</string>
    <string name="icon_workmates">Workmates</string>

    <!-- SignInActivity -->
    <string name="snack_bar_auth_cancelled">Authentication cancelled</string>
    <string name="snack_bar_error_no_network">Authentication failed - No network</string>
    <string name="snack_bar_error_unknown">Authentication failed - Unknown error</string>

    <!-- MainActivity menu -->
    <string name="toolbar_restaurant">I\'m hungry !</string>
    <string name="toolbar_workmates">Available workmates</string>
    <string name="icon_search">Search</string>
    <string name="snack_bar_logout">Logout</string>
    <string name="snack_bar_account_deleted">Account deleted</string>
    <string name="toast_your_lunch">No selected restaurant</string>
    <string name="toast_gps_disabled">GPS disabled</string>

    <!-- Navigation Drawer -->s
    <string name="icon_your_lunch">YOUR LUNCH</string>
    <string name="icon_settings">SETTINGS</string>
    <string name="icon_logout">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_application_id">723552471635167</string>
    <string name="fb_login_protocol_scheme">fb723552471635167</string>

    <!-- LogoutDialog -->
    <string name="title_logout_dialog">Logout</string>
    <string name="message_logout_dialog">Do you want to logout ?</string>
    <string name="positive_btn_logout_dialog">Yes</string>
    <string name="negative_btn_logout_dialog">Cancel</string>

    <!-- GPSActivationDialog -->
    <string name="title_gps_activation_dialog">GPS Activation</string>
    <string name="message_gps_activation_dialog">This application needs to activate GPS device.</string>
    <string name="positive_gps_activation_dialog">Enable</string>
    <string name="negative_gps_activation_dialog">Cancel</string>

    <!-- fragment_location_permission -->
    <string name="title_location">Enable location</string>
    <string name="text_location">Go4Lunch needs to access the location settings of your device.</string>
    <string name="button_location_activation">Enable location</string>
    <string name="content_description_location_icon">Location icon</string>

    <!-- fragment_access_settings_app -->
    <string name="title_access_settings_app">Oups</string>
    <string name="text_access_settings_app">To be able to use Go4Lunch, you need to authorize location access.\n\nClick on app Settings > Authorizations</string>
    <string name="button_access_settings_app">Open Settings</string>

    <!-- fragment_options -->
    <string name="map_option_title">Map</string>
    <string name="map_option_text">Display clusters on map</string>
    <string name="alarm_option_title">Alarm</string>
    <string name="alarm_option_activated_text">Alarm activated</string>
    <string name="alarm_option_deactivated_text">Alarm deactivated</string>
    <string name="account_option_title">Account</string>
    <string name="account_option_text">Delete user account</string>
    <string name="account_option_text_delete">Delete</string>
    <string name="content_description_option_map">Map option icon</string>
    <string name="content_description_option_alarm">Alarm option icon</string>
    <string name="content_description_option_delete_account">Delete account option icon</string>

    <!-- ListViewAdapter -->
    <string name="closing_soon">Closing soon</string>
    <string name="open_until">Open until %1$s:%2$s</string>
    <string name="closed">Closed</string>
    <string name="nb_workmates">(%1$d)</string>
    <string name="distance">%1$d m</string>

    <!-- fragment_map_view.xml -->
    <string name="content_description_fab_location">Button to center map cursor in current user location</string>

    <!-- fragment_restaurant_details.xml -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="content_description_restaurant_img">Restaurant Photo</string>
    <string name="content_description_no_restaurant_photo_icon">Icon indicating that no photo is available for this restaurant</string>
    <string name="content_description_selection_fab">Button to mark the restaurant as selected</string>

    <!-- list_view_item.xml -->
    <string name="schedules_unavailable">Schedules unavailable</string>
    <string name="content_description_rating">Restaurant rating</string>
    <string name="content_description_icon_restaurant">Restaurant Photo</string>
    <string name="content_description_no_restaurant_icon">Icon indicating that no photo is available for this restaurant</string>

    <!-- fragment_list_view.xml -->
    <string name="no_restaurants_nearby">No restaurants nearby</string>

    <!-- activity_sign_in.xml -->
    <string name="title_sign_in_page">Go4Lunch</string>
    <string name="subtitle_sign_in_page">Find a nice restaurant and invite your co-workers for lunch!</string>

    <!-- authentication_layout.xml -->
    <string name="authentication_btn_sign_in">Sign in</string>
    <string name="authentication_btn_google">Sign in with Google</string>
    <string name="authentication_btn_facebook">Sign in with Facebook</string>
    <string name="authentication_btn_twitter">Sign in with Twitter</string>
    <string name="authentication_btn_email">Sign in with Email</string>

    <!-- activity_main.xml -->
    <string name="no_network_detected">No network detected</string>
    <string name="connectivity_bar_btn_close">Close</string>

    <!-- activity_sign_in.xml/activity_main.xml -->
    <string name="content_description_logo">Go4Lunch application logo</string>

    <!-- main_activity_nav_header.xml -->
    <string name="nav_header_title">Go4Lunch</string>
    <string name="content_description_user_icon">User account icon</string>

    <!-- WorkmatesAdapter -->
    <string name="no_decision">%1$s has\'t decided yet</string>
    <string name="is_eating_at">%1$s is eating at %2$s</string>
    <string name="is_going">%1$s is going</string>

    <!-- OptionsFragment -->
    <string name="toast_alarm_activated_today">Alarm at 12:00</string>
    <string name="toast_alarm_activated_tomorrow">Alarm tomorrow at 12:00</string>
    <string name="toast_alarm_deactivated">Alarm deactivated</string>

    <!-- NotificationHandler -->
    <string name="notification_reservation">Go4Lunch - Reservation at %1$s</string>

    <!-- DeleteAccountDialog -->
    <string name="delete_account_dialog_title">Delete account</string>
    <string name="delete_account_dialog_text">This action will permanently delete your account and all associated data. Confirm ?</string>
    <string name="delete_account_dialog_positive_btn">Confirm</string>
    <string name="delete_account_dialog_negative_btn">Cancel</string>

    <!-- Autocomplete search bar -->
    <string name="search_bar_hint">Search restaurants</string>

    <!-- workmates_item.xml -->
    <string name="content_description_workmate_icon">Workmate photo</string>

    <!-- RestaurantDetailsFragment -->
    <string name="no_phone_available">No phone number available</string>
    <string name="no_website_available">No website url available</string>
</resources>