<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_drawer_options">
        <item
            android:id="@+id/your_lunch_option"
            android:icon="@drawable/ic_baseline_local_dining_24dp_white"
            android:title="@string/icon_your_lunch" />
        <item
            android:id="@+id/settings_options"
            android:icon="@drawable/ic_baseline_settings_24dp_white"
            android:title="@string/icon_settings"/>
        <item
            android:id="@+id/logout_options"
            android:icon="@drawable/ic_baseline_power_settings_new_24dp_white"
            android:title="@string/icon_logout" />
    </group>
</menu>