<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    tools:context=".ui.fragments.options.OptionsFragment">

    <!-- Map section -->
    <GridLayout
        android:id="@+id/grid_section_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginStart="20dp"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/map_option_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_map_24dp_grey45"
            android:contentDescription="@string/content_description_option_map" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/map_option_title"
            android:layout_gravity="center"/>
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display_cluster_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grid_section_map"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_cluster"
            android:text="@string/map_option_text"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_option_cluster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Alarm section -->
    <GridLayout
        android:id="@+id/grid_section_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@id/display_cluster_option_layout"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/alarm_option_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_alarm_24dp_grey45"
            android:contentDescription="@string/content_description_option_alarm"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/alarm_option_title"
            android:layout_gravity="center"/>
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alarm_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grid_section_alarm"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/checkbox_alarm"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_alarm"
            android:text="@string/alarm_option_deactivated_text"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/checkbox_alarm"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Account section -->
    <GridLayout
        android:id="@+id/grid_section_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@id/alarm_option_layout"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/account_option_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_24dp_grey45"
            android:contentDescription="@string/content_description_option_delete_account"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/account_option_title"
            android:layout_gravity="center"/>
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/grid_section_account"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/account_option_text"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_option_delete"
            android:text="@string/account_option_text_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>