<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LoginTheme">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_in_page"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="65sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_sign_in_page"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebook_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="60dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            android:text="@string/authentication_btn_facebook"
            android:textAllCaps="false"
            android:theme="@style/MaterialButtonThemeFacebook"
            app:icon="@drawable/com_facebook_button_icon"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/google_auth_btn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="12sp"
            android:text="@string/authentication_btn_google"
            android:textAllCaps="false"
            android:theme="@style/MaterialButtonThemeGoogle"
            app:icon="@drawable/googleg_standard_color_18"
            app:layout_constraintTop_toBottomOf="@id/facebook_auth_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>