<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.permission.LocationPermissionFragment">

    <ImageView
        android:id="@+id/icon_localisation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_baseline_location_on_100dp_light_orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_location"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/icon_localisation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_location"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/title_localisation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_permission_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_location_activation"
        android:layout_marginTop="500dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>